Met requirements for Assignment
