# src/middleware/validateTask.js
@@ -1,4 +1,4 @@
-import { body } from 'express-validator';
+import { body, query } from 'express-validator';
 import { checkValidationResults } from './handleValidationErrors.js';
 
 export const validateTask = [
@@ -14,7 +14,18 @@ export const validateTask = [
   body('completed')
     .optional()
     .isBoolean()
-    .withMessage('completed must be true or false'),
+    .withMessage('completed must be true or false')
+    .toBoolean(),
+
+  checkValidationResults,
+];
+
+export const validateTaskQuery = [
+  query('completed')
+    .optional()
+    .isBoolean()
+    .withMessage('completed must be true or false')
+    .toBoolean(),
 
   checkValidationResults,
 ];
